data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1923.wast
;; 4. **Test Mismatched Operand Types Before `br_table`**:    - **Description**: Provide operands of incorrect types before a `br_table` instruction.    - **Reasoning**: Checks type validation and stack-polymorphic nature of conditional branches.    - **Edge Relation**: Ensures that valid operand sequences are correctly processed, implicated in `br_if` type handling.

(assert_invalid
  (module (func $mismatched-operand-types (block (f64.const 0) (br_if 0 (i32.const 1))))
  )
  "type mismatch"
)